@startuml
'https://plantuml.com/class-diagram
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor #73c8df
skinparam classBackgroundColor MODEL_COLOR
skinparam classAttributeFontColor #FFFFFF
skinparam ArrowColor MODEL_COLOR
show members

left to right direction

class DietPlanList {
}

class DietPlan {
  planName : String
  description : String
}

enum PlanType <<enumeration>> {
  WEIGHT_GAIN
  WEIGHT_LOSS
  WEIGHT_MAINTAIN
}

class MacroNutrientComposition {
  fats : double
  carbohydrates : double
  proteins : double
}

DietPlanList --> "*" DietPlan
DietPlan --> PlanType
DietPlan --> MacroNutrientComposition

@enduml
